# praxec

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  server.json  smithery.yaml
crates/praxec/: Cargo.toml
crates/praxec-agents/: Cargo.toml
crates/praxec-agents/src/: breaker.rs  config.rs  config_doctor.rs  error.rs  executor.rs  file_tools.rs  lib.rs  orchestrator.rs  park.rs  rig_runner.rs  session.rs  spill.rs  tool_budget.rs
crates/praxec-cockpit/: Cargo.toml
crates/praxec-cockpit-mcp/: Cargo.toml
crates/praxec-cockpit-mcp/src/: lib.rs
crates/praxec-cockpit/fixtures/: library.json  run_editing.json
crates/praxec-cockpit/src/: agent.rs  app.rs  chat_catalog.rs  gateway.rs  lib.rs  llm.rs  main.rs  mediator.rs  model.rs  nav.rs  op.rs  priorities.rs  snapshot.rs  theme.rs  view.rs
crates/praxec-cockpit/tests/: response_contract.rs
crates/praxec-core/: Cargo.toml
crates/praxec-core/benches/: gateway_overhead.rs  workflow_bench.rs
crates/praxec-core/data/: README_model_catalog.md  README_tuning.md  model_catalog.json  tuning.json
crates/praxec-core/src/: accounts.rs  audit.rs  binding.rs  bus.rs  cap_verb.rs  capability.rs  catalog.rs  config.rs  contract_hash.rs  cost_report.rs  deescalation.rs  embeddings.rs  error.rs  fs.rs  guards.rs  hitl.rs  hop.rs  hot_reload.rs  intent_index.rs  lib.rs  lock_scheduler.rs  mapping.rs  mission.rs  model.rs  model_catalog.rs  overlay.rs  path_safety.rs  plan.rs  pool_resolver.rs  pool_router.rs  ports.rs  promotion.rs  provider_keys.rs  providers.rs  proxy_workflow.rs  registry_v3.rs  reliability.rs  repo.rs  repo_git.rs  repo_locks.rs  (+10 more)
crates/praxec-core/tests/: agent_exhaustion_terminal.rs  approvals_cli.rs  audit_event_schema.rs  audit_evidence_enrichment.rs  audit_ordering_invariant.rs  audit_rotation.rs  audit_tree_linkage.rs  authoring_preferences.rs  auto_drive.rs  baseline_scenarios.rs  blackboard_typing.rs  cap_output_contract.rs  capability.rs  chain_audit.rs  chain_audit_criticality.rs  chain_basic.rs  chain_guidance.rs  chain_loop.rs  child_workflow_record.rs  composability.rs  config_flag_scope.rs  config_validation.rs  contract_hash_canonical.rs  definition_versioning.rs  delegate_passthrough.rs  discovery.rs  discovery_process_tag.rs  durable_stores.rs  embeddings.rs  evidence_guard.rs  evidence_guard_filters.rs  examples_validate.rs  exclusive_pool_lease.rs  fire_cap.rs  graceful_shutdown.rs  guard_fail_closed.rs  guard_unset_slot.rs  guards_matrix.rs  guidance.rs  guidance_acknowledged.rs  (+69 more)
crates/praxec-embeddings/: Cargo.toml
crates/praxec-embeddings/data/: embedding_models.json
crates/praxec-embeddings/src/: lib.rs
crates/praxec-executors/: Cargo.toml
crates/praxec-executors/src/: arg_render.rs  cli.rs  conn_util.rs  conn_write.rs  diff.rs  dry_run.rs  human.rs  idle.rs  import.rs  ingest.rs  inventory.rs  kind_doctor.rs  lib.rs  mcp.rs  noop.rs  parallel.rs  path_grounding.rs  pipeline.rs  registry.rs  registry_executor.rs  rest.rs  script.rs  structural_analysis.rs  tool_source.rs  untrusted_execution.rs  workflow.rs
crates/praxec-executors/tests/: async_subworkflow_e2e.rs  async_subworkflow_liveness_e2e.rs  async_subworkflow_restart_e2e.rs  async_subworkflow_sequential_e2e.rs  async_subworkflow_spawn_binding_e2e.rs  cap_output_violation.rs  cap_terminated.rs  cli_executor.rs  cli_json_stdout.rs  conn_write.rs  dry_run.rs  ete_smoke.rs  executor_kind_drift.rs  executor_not_wired.rs  flows_e2e.rs  human_audit.rs  human_executor.rs  ingest.rs  inventory_e2e.rs  mcp_executor.rs  mcp_map_binding.rs  meta_flows_e2e.rs  parallel_executor.rs  path_grounding_e2e.rs  pipeline_executor.rs  registry_builders.rs  registry_executor.rs  rest_executor.rs  scoped_capability_io_roundtrip.rs  script_confinement.rs  script_executor.rs  script_executor_audit_descriptor.rs  structural_analysis.rs  tool_inventory_blocker_e2e.rs  tool_source.rs  tool_source_runtime_e2e.rs  workflow_executor.rs  workflow_failure_paths.rs
crates/praxec-llm-executor/: Cargo.toml
crates/praxec-llm-executor/data/: model_costs.json
crates/praxec-llm-executor/src/: affinity.rs  audit.rs  caps.rs  config.rs  config_doctor.rs  cost.rs  lib.rs  pool_execution.rs  prompt.rs  provider_factory.rs  response.rs  skills.rs  stream_event.rs
crates/praxec-llm-executor/tests/: affinity_wiring.rs  audit_event.rs  caps.rs  contract.rs  cost.rs  mock_provider_fmeca.rs  skeleton.rs  skill_injection.rs  wire_d5.rs
crates/praxec-mcp-server/: Cargo.toml
crates/praxec-mcp-server/src/: args.rs  degraded.rs  elicit.rs  handlers.rs  lib.rs  progress.rs  tools.rs
crates/praxec-mcp-server/tests/: argument_parsing_parity.rs  authoring_edit_e2e.rs  authoring_workflow_e2e.rs  describe_audit.rs  dispatch_shape.rs  elicitation_roundtrip.rs  lexicon_embed.rs  observe_query.rs  repair_gate.rs  scripts_search.rs  search_evidence.rs  skills_search.rs  stable_tool_surface.rs  subject_definition_workflow.rs  subject_needs_definition.rs  subject_resolution.rs  tool_schema_snapshot.rs  trace_run_id_plumbing.rs
crates/praxec-schema/: Cargo.toml  build.rs
crates/praxec-schema/schemas/: transition-record.schema.json
crates/praxec-schema/src/: lib.rs
crates/praxec-schema/tests/: schema_sync.rs
crates/praxec-test/: Cargo.toml
crates/praxec-test/fixtures/: badtransition.yaml  capflow.yaml  guarded.yaml  scenarios.yaml  sound.yaml  wedge.yaml
crates/praxec-test/src/: assert.rs  chooser.rs  driver.rs  inject.rs  isolate.rs  lib.rs  mock.rs  mutate.rs  oracle.rs  perfuzz.rs  prng.rs  report.rs  scenario.rs  smartmock.rs  walk.rs
crates/praxec-test/tests/: fixtures_e2e.rs  p1_traversal.rs  p2_scenarios.rs  p3_capability.rs  p6_coverage.rs  p7_detection.rs  p7_mutation.rs
crates/praxec-tui/: Cargo.toml
crates/praxec-tui/src/: agent_config.rs  doctor.rs  doctor_probe_cache.rs  interpreter.rs  keyring.rs  lexicon.rs  lib.rs  main.rs  mcp_caller.rs  mcp_init.rs  migrate.rs  praxec_mcp.rs  provider_keys.rs  reasoning.rs  sub_agent.rs  theme.rs  tui_config.rs
(+325 files in other folders)
