[package]
name = "praxec-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Workflow test / fuzz harness for praxec configs"

[lints]
workspace = true

[dependencies]
praxec-core = { workspace = true }
praxec-executors = { workspace = true }
praxec-agents = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
